Fix background for select on iOS

--- a/content/stylesheets/components/_pagination.scss
+++ b/content/stylesheets/components/_pagination.scss
@@ -87,6 +87,7 @@
     border: none;
     margin: 0;
     padding: 0.45rem 1.55rem 0.45rem 0.85rem;
+    background: transparent;
     cursor: pointer;
     text-align: center;
     color: currentColor;
